# automail

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  requirements_dev.txt  setup.cfg  setup.py
src/automail/core/: mail.py
src/automail/utils/: parse.py
tests/: test_mail.py  test_utils.py
