[metadata]
name = automail
version = 0.0.dev0
author = Polyconseil
author_email = opensource+automail@polyconseil.fr
url = http://github.com/polyconseil/automail
description = Micro framework for SMTP API
long_description = file: README.md
license = BSD 3-Clause License
keywords = mail, email, e-mail, smtp, api
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    beautifulsoup4
    chardet
    markdown
    unidecode
    pyyaml

[options.extras_require]
dev =
    black
    flake8
    pytest

[options.packages.find]
where = src

[flake8]
max-line-length = 88
exclude = build, dist
ignore = E203, W503

[bdist_wheel]
universal = true
